# saide

./: .gitignore  COMMIT_MSG.txt  COORDINATE_FIXES.md  COORDINATE_MAPPING.md  Cargo.toml  FINDINGS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_OPTIMIZATION.md  README.md  README.zh.md  REFACTORING_INPUT_EVENTS.md  TODO.md  TOUCH_EVENT_IMPLEMENTATION.md  a.json  build.rs  cliff.toml  config.behavior-example.toml  config.toml  frame_001.ppm  rustfmt.toml
.github/workflows/: _build-scrcpy-server.yml  _build.yml  build-scrcpy-server.yml  build.yml  release.yml
docs/: AMD_D3D11VA_TROUBLESHOOTING.md  ARCHITECTURE.md  CODEC_AUTO_DETECTION.md  CODE_QUALITY_FIXES.md  CROSS_PLATFORM_ROADMAP.md  DEVELOPMENT.md  DIALOG_SYSTEM_CRITICAL_BUGFIXES.md  DIALOG_SYSTEM_DOUBLE_POP_BUG.md  DIALOG_SYSTEM_HOTFIX.md  DIALOG_SYSTEM_OVERLAY_INTERACTION_BUGFIXES.md  DIALOG_SYSTEM_REFACTORING_SUMMARY.md  LATENCY_OPTIMIZATION.md  PHASE2_ZEROCOPY_FEASIBILITY.md  REFACTOR_PLAN.md  SCRCPY_PROTOCOL.md  SCRCPY_PROTOCOL_ANALYSIS.md  SCRCPY_PROTOCOL_COMPREHENSIVE.md  TODO.md  VIDEO_CODEC_OPTIONS_COMPATIBILITY.md  av_sync_optimization.md  avsync_lockfree.md  configuration.md  control_refactor_plan.md  control_refactor_progress.md  coordinate_transform_fix.md  logging.md  performance_optimization.md  pitfalls.md
docs/testing/: EVENT_QUEUE_VERIFICATION.md
examples/: README.md  README_test_audio.md  audio_diagnostic.rs  probe_codec.rs  render_avsync.rs  render_device.rs  render_nvdec.rs  render_vaapi.rs  test_audio.rs  test_audio_native.rs  test_auto_decoder.rs  test_connection.rs  test_decode_video.rs  test_decoder.rs  test_i18n.rs  test_nvdec.rs  test_planar_interleave.rs  test_protocol.rs  test_vaapi.rs  test_vulkan_import.rs
examples/deprecated/: render_device.rs  render_nvdec.rs  render_vaapi.rs  test_nvdec.rs  test_vaapi.rs
examples/utils/: mod.rs
i18n/en-US/: main.ftl
i18n/zh-CN/: main.ftl
scrcpy-server/: .gitignore  build-server.sh  build.gradle  settings.gradle
scrcpy-server/src/main/java/com/genymobile/scrcpy/: Server.java
scrcpy-server/src/main/java/com/genymobile/scrcpy/control/: Controller.java  DeviceMessage.java  DeviceMessageSender.java  DeviceMessageWriter.java
scripts/: convert_coords_to_percent.py  package-release.sh  test_d3d11va_amd.ps1  test_vaapi_amd.sh
src/: app.rs  constant.rs  decoder_probe.rs  error.rs  lib.rs  main.rs  runtime.rs  v4l2_capture.rs  yuv_shader.wgsl
src/action/: mod.rs
src/app/: coords.rs  init.rs  main.rs  mapping_config.rs  mappings.rs  mod.rs  utils.rs
src/app/ui/: dialog.rs  indicator.rs  main.rs  mapping.rs  mod.rs  player.rs  saide.rs  saide.rs.orig  settings.rs  status_bar.rs  stream_player.rs  toolbar.rs
src/avsync/: clock.rs  mod.rs
src/behavior/: delay.rs  mod.rs  path.rs  pointer.rs  pressure.rs  profiles.rs  rate_limit.rs  session.rs  stall.rs  tremor.rs  typing.rs
src/capture/: mod.rs  recorder.rs  screenshot.rs
src/config/: behavior.rs  log.rs  mapping.rs  mod.rs  scrcpy.rs
src/config/mapping/: action.rs  keymapping.rs  mod.rs  mouse.rs  profile.rs
src/controller/: adb.rs  android_keycode.rs  control_sender.rs  keyboard.rs  mod.rs  mouse.rs  scrcpy.rs  utils.rs
src/core/: connection.rs  device_monitor.rs  init.rs  mod.rs  profile_manager.rs  state.rs  utils.rs
src/core/coords/: mapping.rs  mod.rs  scrcpy.rs  tests.rs  types.rs  visual.rs
src/core/ui/: app.rs  dialog.rs  editor.rs  function.rs  indicator.rs  log.rs  main.rs  mod.rs  notifier.rs  overlay.rs  player.rs  shell.rs  theme.rs  toolbar.rs
src/core/ui/dialog/: mod.rs
src/core/ui/function/: mod.rs
src/decoder/: auto.rs  d3d11va.rs  error.rs  h264.rs  h264_parser.rs  mod.rs  nv12_render.rs  nv12_shader.wgsl  nvdec.rs  packet.rs  rgba_render.rs  rgba_shader.wgsl  vaapi.rs
src/decoder/audio/: error.rs  mod.rs  opus.rs  opus_native.rs  player.rs
src/decoder/macos/: mod.rs  vt.rs
src/decoder/windows/: mf.rs  mod.rs
src/gpu/: mod.rs
src/i18n/: embedded.rs  fs_source.rs  manager.rs  mod.rs  source.rs
src/modal/: mod.rs
src/platform/: mod.rs
src/player/: mod.rs  v4l2_capture.rs
src/profiler/: latency.rs  mod.rs
src/saide/: connection_service.rs  coords.rs  init.rs  mod.rs  utils.rs
src/saide/coords/: mapping.rs  mod.rs  scrcpy.rs  types.rs
src/saide/ui/: action.rs  dialog.rs  indicator.rs  mapping.rs  mod.rs  player.rs  saide.rs  shortcut.rs  state.rs  theme.rs  toolbar.rs
src/saide/ui/shortcuts/: manager.rs  mod.rs
src/scrcpy/: codec_probe.rs  connection.rs  device_message.rs  hardware.rs  hwcodec.rs  mod.rs  server.rs
src/scrcpy/protocol/: audio.rs  control.rs  mod.rs  video.rs
src/shortcut/: manager.rs  mod.rs
src/sync/: clock.rs  mod.rs
src/sys/: mod.rs
src/ui/: main.rs  mod.rs
src/v4l2/: mod.rs  v4l2_capture.rs  yuv_render.rs  yuv_shader.wgsl
