[package]
name = "saide"
description = "Scrcpy companion app with key/mouse mapping"
version = "0.1.0"
edition = "2024"

[lib]
name = "saide"
path = "src/lib.rs"

[[bin]]
name = "saide"
path = "src/main.rs"

[[example]]
name = "test_connection"
path = "examples/test_connection.rs"

[[example]]
name = "test_protocol"
path = "examples/test_protocol.rs"

[[example]]
name = "test_audio"
path = "examples/test_audio.rs"

[[example]]
name = "audio_diagnostic"
path = "examples/audio_diagnostic.rs"

[[example]]
name = "test_planar_interleave"
path = "examples/test_planar_interleave.rs"

[[example]]
name = "test_audio_native"
path = "examples/test_audio_native.rs"

[[example]]
name = "probe_codec"
path = "examples/probe_codec.rs"


[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = { version = "0.33", features = ["serde"] }
wgpu = { version = "27", features = ["vulkan"] }

crossbeam-channel = "0.5"

v4l = "0.14"
serde = { version = "1.0", features = ["derive"] }

# bytemuck for uniform buffer casting
bytemuck = "1"

# Scrcpy protocol dependencies
byteorder = "1.5"
rand = "0.9"
tokio = { version = "1", features = [
    "net",
    "io-util",
    "time",
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util = "0.7"

once_cell = "1"

libc = "0.2"
nix = { version = "0.30", features = ["process", "signal"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

lazy_static = "1.5.0"
parking_lot = "0.12.5"
sysinfo = "0.37.2"
arc-swap = "1.7.1"

# Video decoding (FFmpeg)
ffmpeg-next = "7.1"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

# Audio playback
cpal = "0.17"
rtrb = "0.3"  # Lock-free ring buffer

# Opus codec (direct libopus binding)
opus = "0.3"

directories = "6"
thiserror = "2"
wait-timeout = "0.2.1"
ctrlc = "3.5.1"

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dev-dependencies]
anyhow = "1.0.100"
