[package]
name = "saide"
description = "Scrcpy companion app with key/mouse mapping"
version = "0.1.0"
edition = "2024"

[lib]
name = "saide"
path = "src/lib.rs"

[[bin]]
name = "saide"
path = "src/main.rs"

[[example]]
name = "test_connection"
path = "examples/test_connection.rs"

[[example]]
name = "test_protocol"
path = "examples/test_protocol.rs"

[[example]]
name = "test_audio"
path = "examples/test_audio.rs"

[[example]]
name = "audio_diagnostic"
path = "examples/audio_diagnostic.rs"

[[example]]
name = "test_planar_interleave"
path = "examples/test_planar_interleave.rs"

[[example]]
name = "test_audio_native"
path = "examples/test_audio_native.rs"

[[example]]
name = "probe_codec"
path = "examples/probe_codec.rs"


[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = { version = "0.33", features = ["serde"] }

crossbeam-channel = "0.5"

serde = { version = "1.0", features = ["derive"] }

bytemuck = "1"

byteorder = "1.5"
rand = "0.10"
tokio = { version = "1", features = [
    "net",
    "io-util",
    "time",
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util = "0.7"

once_cell = "1"

libc = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

lazy_static = "1.5.0"
parking_lot = "0.12.5"
arc-swap = "1.8.1"

ffmpeg-next = "8"

cpal = "0.17"
rtrb = "0.3"

opus = "0.3"

toml = "1"
chrono = { version = "0.4.43", features = ["serde"] }

directories = "6"
thiserror = "2"
wait-timeout = "0.2.1"
ctrlc = "3.5.2"

fluent-bundle = "0.16"
intl-memoizer = "0.5"
unic-langid = "0.9"
sys-locale = "0.3"
lru = "0.16"

egui_cjk_font = { path = "crates/egui-cjk-font" }
egui-command = { path = "crates/egui-command" }
egui-command-binding = { path = "crates/egui-command-binding" }

notify = "8"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "27", features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "27", features = ["dx12"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "27", features = ["metal"] }
core-foundation = "0.10"
core-graphics = "0.25"

[dev-dependencies]
anyhow = "1"

[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
